.k8s/elastic.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devoops
  name: demo-app-elastic
spec:
  selector:
    name: demo-app
    component: elastic
  ports:
    - port: 9200
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: devoops
  name: demo-app-elastic
spec:
  selector:
    matchLabels:
      name: demo-app
      component: elastic
  serviceName: demo-app-elastic
  replicas: 1
  template:
    metadata:
      labels:
        name: demo-app
        component: elastic
    spec:
      containers:
      - name: demo-app-elastic
        image: elasticsearch:7.17.7
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: es-data
          mountPath: /usr/share/elasticsearch/data
        ports:
          - containerPort: 9200
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        #   limits:
        #     cpu: 500m
        #     memory: 2Gi
  volumeClaimTemplates:
  - metadata:
      name: es-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
