.k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  namespace: devoops
  name: demo-app-redis
spec:
  selector:
    name: demo-app
    component: redis
  ports:
    - port: 6379
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devoops
  name: demo-app-redis
  labels:
    name: demo-app
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: demo-app
      component: redis
  template:
    metadata:
      labels:
        name: demo-app
        component: redis
    spec:
      containers:
        - name: demo-app-redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          args:
            - --loglevel
            - notice
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
